fix overflow hidden
calculate height based on text length

--- a/src/components/chatbox/chatbox.css
+++ b/src/components/chatbox/chatbox.css
@@ -45,10 +45,8 @@ input{
     padding-bottom: 5px;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
-    font: optional;
+    overflow: visible;
     padding-left: 10px;
-    word-wrap: break-word;
     border-radius: 25px;
 }
 
@@ -70,6 +68,7 @@ input{
     justify-content: center;
     align-content: center;
     flex-direction: column;
+    word-wrap: break-word;
     font-size: 25px;
     overflow: hidden;
 }
